--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 
 <body>
     <header class="bg-yellow-100">
+        <nav class="md:flex justify-between container mx-auto h-20 items-center px-8">
+            <div class="mb-2 md:mb-0 w-3/5 mx-auto md:w-3/4">
+                <img class="w-80" src="icons/Group 33072.png" alt="">
+            </div>
+            <div class="w-4/5 mx-auto md:w-1/4">
+                <ul class="flex justify-between">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
+            </div>
+        </nav>
         <section class="container md:flex items-center justify-around py-12">
             <div class="space-y-4">
                 <h1 class="text-7xl font-bold uppercase"><span class="text-yellow-400">Be the penguins</span>
